# cmake-example-v2

./: CMakeLists.txt  CMakePresets.json  README.md  build.sh  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-armv8.sh  conanfile.txt  conanrun.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
.github/workflows/: cmake-multi-platform.yml
apps/: CMakeLists.txt  app1.cc
src/coremath/: CMakeLists.txt
tests/: CMakeLists.txt
tests/factorial/: CMakeLists.txt
tests/mul/: CMakeLists.txt
tests/sub/: CMakeLists.txt
tests/sum/: CMakeLists.txt
